--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basic E-commerce Website</title>
+  <title> E-commerce Website</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,6 +14,7 @@
 
     header {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
       padding: 20px;
@@ -23,12 +24,21 @@
 
     h1 {
       margin: 0;
+      font-size: 24px;
+    }
+
+    .cart {
+      font-size: 18px;
+      margin-top: 10px;
+    }
+
+    main {
+      padding: 20px;
     }
 
     .products {
       display: flex;
       flex-wrap: wrap;
-      padding: 20px;
       gap: 20px;
       justify-content: center;
     }
@@ -37,9 +47,24 @@
       background: white;
       border-radius: 8px;
       padding: 20px;
-      width: 200px;
+      width: 220px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+
+    .product:hover {
+      transform: scale(1.05);
+    }
+
+    .product h3 {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .product p {
+      font-size: 16px;
+      margin-bottom: 15px;
     }
 
     .product button {
@@ -49,14 +74,41 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      font-size: 14px;
+      width: 100%;
     }
 
     .product button:hover {
       background: #555;
     }
 
-    .cart {
-      font-size: 18px;
+    @media (max-width: 768px) {
+      .product {
+        width: 45%;
+      }
+
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .cart {
+        margin-top: 10px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .product {
+        width: 100%;
+      }
+
+      h1 {
+        font-size: 20px;
+      }
+
+      .cart {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -74,19 +126,21 @@
   </main>
 
   <script>
+    
     const products = [
       { id: 1, name: "Product 1", price: 100 },
       { id: 2, name: "Product 2", price: 200 },
       { id: 3, name: "Product 3", price: 150 },
       { id: 4, name: "Product 4", price: 250 },
+      { id: 5, name: "Product 5", price: 180 },
+      { id: 6, name: "Product 6", price: 300 },
     ];
 
     let cartCount = 0;
-
     const productsContainer = document.getElementById("products");
     const cartCounter = document.getElementById("cart-count");
 
-    // Display products dynamically
+    // Display products
     products.forEach(product => {
       const productDiv = document.createElement("div");
       productDiv.classList.add("product");
@@ -98,7 +152,7 @@
       productsContainer.appendChild(productDiv);
     });
 
-    // Add to cart function
+    // Add to cart
     function addToCart() {
       cartCount++;
       cartCounter.textContent = cartCount;
